--- a/coc-settings.json
+++ b/coc-settings.json
@@ -38,7 +38,8 @@
     "diagnostic.displayByAle"        : false,
     "diagnostic.refreshOnInsertMode" : false,
     "diagnostic.checkCurrentLine"    : false,
-    "diagnostic.virtualTextPrefix"   : " ❯❯❯ ",
+    /* "diagnostic.virtualTextPrefix"   : " ❯❯❯ ", */
+    "diagnostic.virtualTextPrefix"   : " ● ",
     "diagnostic.virtualText"         : true,
     /* "yank.enableCompletion": false */
     "session.saveOnVimLeave": false,
@@ -54,7 +55,7 @@
 
     "explorer.openAction.strategy": "select",
     "explorer.width": 40,
-    "explorer.file.autoReveal": false,
+    "explorer.file.autoReveal": true,
     "explorer.quitOnOpen": true,
     "explorer.sources": [
     {
